--- a/src/app.css
+++ b/src/app.css
@@ -5,11 +5,12 @@
 body {
 	padding: 0;
 	margin: 0;
-	font-family: "Kumbh Sans", sans-serif;
+	font-family: "Barlow Condensed", sans-serif;
+	font-size: 17px;
 }
 
 .main {
-	padding-top: 20px;
+	margin-top: 60px;
 	width: 100%;
 }
 
@@ -27,4 +28,8 @@ th, td {
 	text-align: left;
 	padding: 10px;
 	border: 1px solid #dddddd;
+}
+
+.main {
+	overflow-x: scroll;
 }
