--- a/src/app.css
+++ b/src/app.css
@@ -24,8 +24,12 @@ th {
 	font-weight: 500;
 }
 
+th, tr {
+	border-top: 1px solid #dddddd;
+	border-bottom: 1px solid #dddddd;
+}
+
 th, td {
 	text-align: left;
 	padding: 10px;
-	border: 1px solid #dddddd;
 }
